# psychology-qa-streamlit

./: .app.env.example  .gitignore  .postgres.env.example  Dockerfile  Dockerfile.dev  README.md  auth_config.example.yaml  auth_config.yaml  conda.yaml  docker-compose.dev.yaml  pyproject.toml  requirements.torch.txt  requirements.txt
.github/workflows/: hugging_face_sync.yaml
.streamlit/: config.toml  pages.toml  secrets.toml
psychology_qa/: app.py  auth_config.yaml  authenticator.py  config.py  constants.py  database.py  log_config.py  models.py  utils.py
psychology_qa/.streamlit/: pages.toml
psychology_qa/pages/: authors.py  base.py  chat.py  library.py  upload_audio.py  upload_book.py
psychology_qa/pipelines/: __init__.py  batch_translator.py  custom_faiss_store.py  database.py  embedding.py  indexing.py  iterative_translator.py  pgvector_store.py  preprocessor.py  processing.py  querying.py  translate.py  whisper.py
psychology_qa/pipelines/nodes/: __init__.py  batch_translator.py  custom_preprocessor.py  custom_ranker.py  pgvector_store.py  whisper.py
psychology_qa/views/: __init__.py  base.py  chat.py  library.py  upload_book.py
